# inkwell

./: LICENSE  README.md  prompt.txt  pyproject.toml
.github/workflows/: publish.yml
inkwell/: constants.py
inkwell/prompt/: __main__.py
inkwell/stabilityai/: __main__.py
